finished code in tiledlevel

--- a/LE4_Sha_Taojin/GAME1017_EmptyEngine/GAME1017_EmptyEngine.vcxproj
+++ b/LE4_Sha_Taojin/GAME1017_EmptyEngine/GAME1017_EmptyEngine.vcxproj
@@ -167,6 +167,14 @@
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="TiledLevel.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Dat\Level1.txt" />
+    <Text Include="Dat\Tiledata.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Img\Player.png" />
+    <Image Include="Img\Tiles.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
