--- a/LE4_Sha_Taojin/GAME1017_EmptyEngine/GAME1017_EmptyEngine.vcxproj.filters
+++ b/LE4_Sha_Taojin/GAME1017_EmptyEngine/GAME1017_EmptyEngine.vcxproj.filters
@@ -94,4 +94,20 @@
       <Filter>States</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Dat\Level1.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="Dat\Tiledata.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Img\Player.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Img\Tiles.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
